modify 2nd module to take pictures, and corrected wishlist
